# Android-xtensor

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jiwon/androidxtensor/: ExampleInstrumentedTest.kt  XTensorPracticeTest.kt
app/src/androidTest/java/com/jiwon/xtensor_jni/: ExampleInstrumentedTest.kt  JniXTensorTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/includes/jni_base/: jni_array.hpp  jni_class.hpp  jni_xtensor.hpp
app/src/main/cpp/xtensor/: jni_xtensor.cpp  utility.cpp  xtensor_practice.cpp
app/src/main/java/com/jiwon/androidxtensor/: XTensor.kt
app/src/main/java/com/jiwon/xtensor_jni/: XTensor.kt
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jiwon/androidxtensor/: ExampleUnitTest.kt
app/src/test/java/com/jiwon/xtensor_jni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
